created all btns and styles

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+    <div>
+        <button class="btn1">Red</button>
+        <button class="btn2">Blue</button>
+    </div>
+
+    <div class="color"></div>
+
+    <button class="remove-color">Restore Color!</button>
     
     <script src="./js/script.js"></script>
 </body>
