code corrections and use prettier

--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>004 - Color Flipper</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-
-    <div>
-        <button class="btn1">Red</button>
-        <button class="btn2">Blue</button>
-    </div>
-
-    <div class="color"></div>
-
-    <button class="remove-color">Restore Color!</button>
-    
-    <script src="./js/script.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>004 - Color Flipper</title>
+		<link rel="stylesheet" href="./css/style.css" />
+	</head>
+	<body>
+		<div>
+			<button class="btn1">Red</button>
+			<button class="btn2">Blue</button>
+		</div>
+		<div class="color"></div>
+		<button class="remove-color">Restore Color!</button>
+		<script src="./js/script.js"></script>
+	</body>
 </html>
